Edit Calendar Image Relates #41

--- a/tasks/tasks.html
+++ b/tasks/tasks.html
@@ -21,7 +21,7 @@
         <!-- Main tile Section -->
         <section class="main-tile">
             <p class="main-text">Manage Your Time!</p>
-            <img class="calendar" src="../assets/imgs/icons8-schedule-50.png" alt="calendar Icon">
+            <img class="calendar" src="../assets/imgs/schedule.svg" alt="calendar Icon">
         </section>
         <!-- Progress Section -->
         <div class="prog">
